--- a/data/memory/projects/Aurora-Main/project_memory.json
+++ b/data/memory/projects/Aurora-Main/project_memory.json
@@ -34,6 +34,16 @@
       "role": "user",
       "content": "Performance check:\nCPU: 0.00 load / 20 cores\nMemory: 85.4% used\nTop local processes (CPU/Memory):\nCode (pid 14840) CPU:1978.5 MEM:368.6MB\nCode (pid 36876) CPU:1354.7 MEM:228.1MB\nOmenCommandCenterBackground (pid 30308) CPU:507.6 MEM:199.6MB\nCode (pid 2624) CPU:480.3 MEM:423.6MB\nDiscord (pid 19564) CPU:445.7 MEM:269MB\nRecommended actions: Close heavy apps and browser tabs consuming CPU/RAM. Kill stray dev servers: run x-stop or close ports 5000/5002/8000 if unused. Reduce worker load: pause scans or lower concurrency for a few minutes. Optional: restart Aurora services (x-stop then x-start) to clear stale processes.\nSay 'execute remediation' to restart Aurora services now, or tell me which process/port to target.",
       "timestamp": "2025-12-30T02:03:05.828083"
+    },
+    {
+      "role": "user",
+      "content": "scan the pc and tell me why it is overheating",
+      "timestamp": "2025-12-30T02:11:51.301769"
+    },
+    {
+      "role": "user",
+      "content": "Performance check:\nCPU: 0.00 load / 20 cores\nMemory: 85.1% used\nTop local processes (CPU/Memory):\nCode (pid 14840) CPU:2044.7 MEM:364.9MB\nCode (pid 36876) CPU:1392.8 MEM:222.2MB\nOmenCommandCenterBackground (pid 30308) CPU:515.3 MEM:195.4MB\nCode (pid 2624) CPU:508.2 MEM:352.5MB\nDiscord (pid 19564) CPU:460.9 MEM:276.2MB\nRecommended actions: Close heavy apps and browser tabs consuming CPU/RAM. Kill stray dev servers: run x-stop or close ports 5000/5002/8000 if unused. Reduce worker load: pause scans or lower concurrency for a few minutes. Optional: restart Aurora services (x-stop then x-start) to clear stale processes.\nSay 'execute remediation' to restart Aurora services now, or tell me which process/port to target.",
+      "timestamp": "2025-12-30T02:11:52.492373"
     }
   ],
   "mid_term": [
@@ -1547,6 +1557,33 @@
         "type": "shortterm"
       },
       "stored_at": "2025-12-30T02:03:05.843512"
+    },
+    "memory_507999aa-70b2-4c7c-b125-6ee50d1e4da3": {
+      "value": {
+        "text": "scan the pc and tell me why it is overheating",
+        "meta": {
+          "session_id": "default",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2025-12-30T02:11:51.334480",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-30T02:11:51.334492"
+    },
+    "memory_41e62df5-f873-465d-afe6-bc69c9f1695b": {
+      "value": {
+        "text": "Performance check:\nCPU: 0.00 load / 20 cores\nMemory: 85.1% used\nTop local processes (CPU/Memory):\nCode (pid 14840) CPU:2044.7 MEM:364.9MB\nCode (pid 36876) CPU:1392.8 MEM:222.2MB\nOmenCommandCenterBackground (pid 30308) CPU:515.3 MEM:195.4MB\nCode (pid 2624) CPU:508.2 MEM:352.5MB\nDiscord (pid 19564) CPU:460.9 MEM:276.2MB\nRecommended actions: Close heavy apps and browser tabs consuming CPU/RAM. Kill stray dev servers: run x-stop or close ports 5000/5002/8000 if unused. Reduce worker load: pause scans or lower concurrency for a few minutes. Optional: restart Aurora services (x-stop then x-start) to clear stale processes.\nSay 'execute remediation' to restart Aurora services now, or tell me which process/port to target.",
+        "meta": {
+          "session_id": "default",
+          "client": "web",
+          "type": "aurora_response",
+          "detection": "aurora_ai"
+        },
+        "timestamp": "2025-12-30T02:11:52.504138",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-30T02:11:52.504159"
     }
   },
   "events": [
@@ -2639,6 +2676,26 @@
         "longterm": false
       },
       "timestamp": "2025-12-30T02:03:05.851181"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "507999aa-70b2-4c7c-b125-6ee50d1e4da3",
+        "text_length": 45,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-30T02:11:51.345217"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "41e62df5-f873-465d-afe6-bc69c9f1695b",
+        "text_length": 722,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-30T02:11:52.517868"
     }
   ],
   "semantic_index": {
@@ -2650,5 +2707,5 @@
       "compressed_at": "2025-12-30T01:34:48.996772"
     }
   },
-  "last_updated": "2025-12-30T02:03:05.851461"
+  "last_updated": "2025-12-30T02:11:52.518319"
 }
