--- a/data/memory/projects/Aurora-Main/project_memory.json
+++ b/data/memory/projects/Aurora-Main/project_memory.json
@@ -2,48 +2,8 @@
   "short_term": [
     {
       "role": "user",
-      "content": "Performance check:\nCPU: 0.00 load / 20 cores\nMemory: 83.5% used\nTop local processes (CPU/Memory):\nProcess snapshot unavailable (no Windows process data).\nRecommended actions: Close heavy apps and browser tabs consuming CPU/RAM. Kill stray dev servers: run x-stop or close ports 5000/5002/8000 if unused. Reduce worker load: pause scans or lower concurrency for a few minutes. Optional: restart Aurora services (x-stop then x-start) to clear stale processes.\nSay 'execute remediation' to restart Aurora services now, or tell me which process/port to target.",
-      "timestamp": "2025-12-30T01:39:11.231866"
-    },
-    {
-      "role": "user",
-      "content": "scan the pc and tell me why it is overheating",
-      "timestamp": "2025-12-30T01:40:08.924521"
-    },
-    {
-      "role": "user",
-      "content": "Performance check:\nCPU: 0.00 load / 20 cores\nMemory: 84.0% used\nTop local processes (CPU/Memory):\nCode (pid 14840) CPU:1643.5 MEM:307.5MB\nCode (pid 36876) CPU:1141.6 MEM:245.4MB\nOmenCommandCenterBackground (pid 30308) CPU:488.9 MEM:201MB\nCode (pid 2624) CPU:417.3 MEM:349.3MB\nDiscord (pid 19564) CPU:416.2 MEM:269.1MB\nRecommended actions: Close heavy apps and browser tabs consuming CPU/RAM. Kill stray dev servers: run x-stop or close ports 5000/5002/8000 if unused. Reduce worker load: pause scans or lower concurrency for a few minutes. Optional: restart Aurora services (x-stop then x-start) to clear stale processes.\nSay 'execute remediation' to restart Aurora services now, or tell me which process/port to target.",
-      "timestamp": "2025-12-30T01:40:10.294782"
-    },
-    {
-      "role": "user",
-      "content": "scan the pc and tell me why it is overheating",
-      "timestamp": "2025-12-30T01:48:53.224425"
-    },
-    {
-      "role": "user",
-      "content": "Performance check:\nCPU: 0.00 load / 20 cores\nMemory: 81.7% used\nTop local processes (CPU/Memory):\nCode (pid 14840) CPU:1831.3 MEM:374.4MB\nCode (pid 36876) CPU:1268.7 MEM:233.3MB\nOmenCommandCenterBackground (pid 30308) CPU:495.2 MEM:198.6MB\nCode (pid 2624) CPU:447.0 MEM:340.3MB\nDiscord (pid 19564) CPU:427.2 MEM:269.1MB\nRecommended actions: Close heavy apps and browser tabs consuming CPU/RAM. Kill stray dev servers: run x-stop or close ports 5000/5002/8000 if unused. Reduce worker load: pause scans or lower concurrency for a few minutes. Optional: restart Aurora services (x-stop then x-start) to clear stale processes.\nSay 'execute remediation' to restart Aurora services now, or tell me which process/port to target.",
-      "timestamp": "2025-12-30T01:48:54.470842"
-    },
-    {
-      "role": "user",
-      "content": "scan the pc and tell me why it is overheating",
-      "timestamp": "2025-12-30T02:03:04.186530"
-    },
-    {
-      "role": "user",
-      "content": "Performance check:\nCPU: 0.00 load / 20 cores\nMemory: 85.4% used\nTop local processes (CPU/Memory):\nCode (pid 14840) CPU:1978.5 MEM:368.6MB\nCode (pid 36876) CPU:1354.7 MEM:228.1MB\nOmenCommandCenterBackground (pid 30308) CPU:507.6 MEM:199.6MB\nCode (pid 2624) CPU:480.3 MEM:423.6MB\nDiscord (pid 19564) CPU:445.7 MEM:269MB\nRecommended actions: Close heavy apps and browser tabs consuming CPU/RAM. Kill stray dev servers: run x-stop or close ports 5000/5002/8000 if unused. Reduce worker load: pause scans or lower concurrency for a few minutes. Optional: restart Aurora services (x-stop then x-start) to clear stale processes.\nSay 'execute remediation' to restart Aurora services now, or tell me which process/port to target.",
-      "timestamp": "2025-12-30T02:03:05.828083"
-    },
-    {
-      "role": "user",
-      "content": "scan the pc and tell me why it is overheating",
-      "timestamp": "2025-12-30T02:11:51.301769"
-    },
-    {
-      "role": "user",
-      "content": "Performance check:\nCPU: 0.00 load / 20 cores\nMemory: 85.1% used\nTop local processes (CPU/Memory):\nCode (pid 14840) CPU:2044.7 MEM:364.9MB\nCode (pid 36876) CPU:1392.8 MEM:222.2MB\nOmenCommandCenterBackground (pid 30308) CPU:515.3 MEM:195.4MB\nCode (pid 2624) CPU:508.2 MEM:352.5MB\nDiscord (pid 19564) CPU:460.9 MEM:276.2MB\nRecommended actions: Close heavy apps and browser tabs consuming CPU/RAM. Kill stray dev servers: run x-stop or close ports 5000/5002/8000 if unused. Reduce worker load: pause scans or lower concurrency for a few minutes. Optional: restart Aurora services (x-stop then x-start) to clear stale processes.\nSay 'execute remediation' to restart Aurora services now, or tell me which process/port to target.",
-      "timestamp": "2025-12-30T02:11:52.492373"
+      "content": "Performance check:\nCPU: 0.00 load / 20 cores\nMemory: 81.5% used\nTop local processes (CPU/Memory):\nCode (pid 14840) CPU:2140.7 MEM:369.7MB\nCode (pid 36876) CPU:1448.8 MEM:272.7MB\nCode (pid 2624) CPU:547.9 MEM:398.5MB\nOmenCommandCenterBackground (pid 30308) CPU:523.8 MEM:198.2MB\nDiscord (pid 19564) CPU:469.3 MEM:275.8MB\nRecommended actions: Close heavy apps and browser tabs consuming CPU/RAM. Kill stray dev servers: run x-stop or close ports 5000/5002/8000 if unused. Reduce worker load: pause scans or lower concurrency for a few minutes. Optional: restart Aurora services (x-stop then x-start) to clear stale processes.\nSay 'execute remediation' to restart Aurora services now, or tell me which process/port to target.",
+      "timestamp": "2025-12-30T02:18:06.915121"
     }
   ],
   "mid_term": [
@@ -53,6 +13,13 @@
       "first_message": "2025-12-30T01:34:49.267645",
       "last_message": "2025-12-30T01:39:11.050173",
       "compressed_at": "2025-12-30T01:39:11.053630"
+    },
+    {
+      "summary": "Compressed 10 messages",
+      "message_count": 10,
+      "first_message": "2025-12-30T01:39:11.231866",
+      "last_message": "2025-12-30T02:18:05.688965",
+      "compressed_at": "2025-12-30T02:18:05.694382"
     }
   ],
   "long_term": [
@@ -1584,6 +1551,33 @@
         "type": "shortterm"
       },
       "stored_at": "2025-12-30T02:11:52.504159"
+    },
+    "memory_21356387-ccdc-4226-a17a-7e4c2d859c94": {
+      "value": {
+        "text": "scan the pc and tell me why it is overheating",
+        "meta": {
+          "session_id": "default",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2025-12-30T02:18:05.726874",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-30T02:18:05.726890"
+    },
+    "memory_a86743c7-69fa-406a-9ddb-3a25acc75d7d": {
+      "value": {
+        "text": "Performance check:\nCPU: 0.00 load / 20 cores\nMemory: 81.5% used\nTop local processes (CPU/Memory):\nCode (pid 14840) CPU:2140.7 MEM:369.7MB\nCode (pid 36876) CPU:1448.8 MEM:272.7MB\nCode (pid 2624) CPU:547.9 MEM:398.5MB\nOmenCommandCenterBackground (pid 30308) CPU:523.8 MEM:198.2MB\nDiscord (pid 19564) CPU:469.3 MEM:275.8MB\nRecommended actions: Close heavy apps and browser tabs consuming CPU/RAM. Kill stray dev servers: run x-stop or close ports 5000/5002/8000 if unused. Reduce worker load: pause scans or lower concurrency for a few minutes. Optional: restart Aurora services (x-stop then x-start) to clear stale processes.\nSay 'execute remediation' to restart Aurora services now, or tell me which process/port to target.",
+        "meta": {
+          "session_id": "default",
+          "client": "web",
+          "type": "aurora_response",
+          "detection": "aurora_ai"
+        },
+        "timestamp": "2025-12-30T02:18:06.929308",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-30T02:18:06.929322"
     }
   },
   "events": [
@@ -2696,6 +2690,26 @@
         "longterm": false
       },
       "timestamp": "2025-12-30T02:11:52.517868"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "21356387-ccdc-4226-a17a-7e4c2d859c94",
+        "text_length": 45,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-30T02:18:05.734933"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "a86743c7-69fa-406a-9ddb-3a25acc75d7d",
+        "text_length": 722,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-30T02:18:06.937173"
     }
   ],
   "semantic_index": {
@@ -2707,5 +2721,5 @@
       "compressed_at": "2025-12-30T01:34:48.996772"
     }
   },
-  "last_updated": "2025-12-30T02:11:52.518319"
+  "last_updated": "2025-12-30T02:18:06.937430"
 }
