--- a/data/memory/projects/Aurora-Main/project_memory.json
+++ b/data/memory/projects/Aurora-Main/project_memory.json
@@ -4,6 +4,16 @@
       "role": "user",
       "content": "Performance check:\nCPU: 0.00 load / 20 cores\nMemory: 81.5% used\nTop local processes (CPU/Memory):\nCode (pid 14840) CPU:2140.7 MEM:369.7MB\nCode (pid 36876) CPU:1448.8 MEM:272.7MB\nCode (pid 2624) CPU:547.9 MEM:398.5MB\nOmenCommandCenterBackground (pid 30308) CPU:523.8 MEM:198.2MB\nDiscord (pid 19564) CPU:469.3 MEM:275.8MB\nRecommended actions: Close heavy apps and browser tabs consuming CPU/RAM. Kill stray dev servers: run x-stop or close ports 5000/5002/8000 if unused. Reduce worker load: pause scans or lower concurrency for a few minutes. Optional: restart Aurora services (x-stop then x-start) to clear stale processes.\nSay 'execute remediation' to restart Aurora services now, or tell me which process/port to target.",
       "timestamp": "2025-12-30T02:18:06.915121"
+    },
+    {
+      "role": "user",
+      "content": "status",
+      "timestamp": "2025-12-30T02:44:00.225413"
+    },
+    {
+      "role": "user",
+      "content": "Diagnostics report:\nLuminar: ONLINE | Memory: ONLINE | Nexus V3: ONLINE (hyperspeed) | AuroraX: ONLINE\nWorkers: total 300, active 0, idle 300\nPacks: 15/15 packs, 20 submodules\nRecommendations: No critical faults detected.",
+      "timestamp": "2025-12-30T02:44:00.405504"
     }
   ],
   "mid_term": [
@@ -1578,6 +1588,33 @@
         "type": "shortterm"
       },
       "stored_at": "2025-12-30T02:18:06.929322"
+    },
+    "memory_3681476f-a825-4127-85d5-0d8c36dec621": {
+      "value": {
+        "text": "status",
+        "meta": {
+          "session_id": "default",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2025-12-30T02:44:00.262504",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-30T02:44:00.262515"
+    },
+    "memory_b16871e2-0f4b-4d5f-8262-f8b2436e87bf": {
+      "value": {
+        "text": "Diagnostics report:\nLuminar: ONLINE | Memory: ONLINE | Nexus V3: ONLINE (hyperspeed) | AuroraX: ONLINE\nWorkers: total 300, active 0, idle 300\nPacks: 15/15 packs, 20 submodules\nRecommendations: No critical faults detected.",
+        "meta": {
+          "session_id": "default",
+          "client": "web",
+          "type": "aurora_response",
+          "detection": "aurora_ai"
+        },
+        "timestamp": "2025-12-30T02:44:00.433813",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-30T02:44:00.433839"
     }
   },
   "events": [
@@ -2710,6 +2747,26 @@
         "longterm": false
       },
       "timestamp": "2025-12-30T02:18:06.937173"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "3681476f-a825-4127-85d5-0d8c36dec621",
+        "text_length": 6,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-30T02:44:00.277936"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "b16871e2-0f4b-4d5f-8262-f8b2436e87bf",
+        "text_length": 221,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-30T02:44:00.449893"
     }
   ],
   "semantic_index": {
@@ -2721,5 +2778,5 @@
       "compressed_at": "2025-12-30T01:34:48.996772"
     }
   },
-  "last_updated": "2025-12-30T02:18:06.937430"
+  "last_updated": "2025-12-30T02:44:00.450530"
 }
