--- a/.github/workflows/aurora-e2e.yml
+++ b/.github/workflows/aurora-e2e.yml
@@ -50,13 +50,7 @@ jobs:
         env:
           HOST: http://127.0.0.1:8000
         run: |
-          python - <<'PY' "$HOST"
-import httpx, sys
-host=sys.argv[1]
-r=httpx.get(f"{host}/healthz", timeout=5)
-print("healthz:", r.status_code, r.text)
-r.raise_for_status()
-PY
+          python -c "import httpx, sys; host=sys.argv[1]; r=httpx.get(f'{host}/healthz', timeout=5); print('healthz:', r.status_code, r.text); r.raise_for_status()" "$HOST"
 
       - name: Teardown
         if: always()
