--- a/.github/workflows/aurora-e2e.yml
+++ b/.github/workflows/aurora-e2e.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
+    env:
+      AURORA_TOKEN_SECRET: ${{ secrets.AURORA_TOKEN_SECRET }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
