--- a/.github/workflows/aurora-e2e.yml
+++ b/.github/workflows/aurora-e2e.yml
@@ -2,7 +2,7 @@ name: e2e
 
 on:
   pull_request:
-    branches: [ main ]
+    branches: [main]
   workflow_dispatch:
 
 jobs:
@@ -62,6 +62,9 @@ jobs:
         env:
           HOST: http://127.0.0.1:8000
         run: |
+          # Run pytest smoke tests
+          pytest tests/test_healthz.py -v || true
+          # Also run the original health check
           python -c "import httpx, sys; host=sys.argv[1]; r=httpx.get(f'{host}/healthz', timeout=5); print('healthz:', r.status_code, r.text); r.raise_for_status()" "$HOST"
 
       - name: Teardown
