--- a/data/memory/projects/Aurora-Main/project_memory.json
+++ b/data/memory/projects/Aurora-Main/project_memory.json
@@ -24,6 +24,16 @@
       "role": "user",
       "content": "Request queued: aurora i need you to create a Ai-native os. Nexus V3 is processing with 300 workers.",
       "timestamp": "2026-01-19T10:57:24.377705"
+    },
+    {
+      "role": "user",
+      "content": "aurora i need you to create a Ai-native os",
+      "timestamp": "2026-01-19T11:15:17.076333"
+    },
+    {
+      "role": "user",
+      "content": "Request queued: aurora i need you to create a Ai-native os. Nexus V3 is processing with 300 workers.",
+      "timestamp": "2026-01-19T11:15:18.865850"
     }
   ],
   "mid_term": [
@@ -2078,6 +2088,33 @@
         "type": "shortterm"
       },
       "stored_at": "2026-01-19T10:57:24.443074"
+    },
+    "memory_86cc186d-0369-444d-bb70-bc614206c569": {
+      "value": {
+        "text": "aurora i need you to create a Ai-native os",
+        "meta": {
+          "session_id": "chat-1768839297852",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2026-01-19T11:15:17.165556",
+        "type": "shortterm"
+      },
+      "stored_at": "2026-01-19T11:15:17.165581"
+    },
+    "memory_2e8b8df6-011d-4207-96ce-c62fbbee793f": {
+      "value": {
+        "text": "Request queued: aurora i need you to create a Ai-native os. Nexus V3 is processing with 300 workers.",
+        "meta": {
+          "session_id": "chat-1768839297852",
+          "client": "web",
+          "type": "aurora_response",
+          "detection": "aurora_ai"
+        },
+        "timestamp": "2026-01-19T11:15:18.903319",
+        "type": "shortterm"
+      },
+      "stored_at": "2026-01-19T11:15:18.903353"
     }
   },
   "events": [
@@ -3550,6 +3587,26 @@
         "longterm": false
       },
       "timestamp": "2026-01-19T10:57:24.501347"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "86cc186d-0369-444d-bb70-bc614206c569",
+        "text_length": 42,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2026-01-19T11:15:17.189790"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "2e8b8df6-011d-4207-96ce-c62fbbee793f",
+        "text_length": 100,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2026-01-19T11:15:18.930621"
     }
   ],
   "semantic_index": {
@@ -3561,5 +3618,5 @@
       "compressed_at": "2025-12-30T01:34:48.996772"
     }
   },
-  "last_updated": "2026-01-19T10:57:24.502420"
+  "last_updated": "2026-01-19T11:15:18.931310"
 }
